// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/env .getConfig(env) supports Bitbucket token 1`] = `
Object {
  "hostRules": Array [
    Object {
      "endpoint": "a bitbucket endpoint",
      "platform": "bitbucket",
      "token": "a bitbucket token",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`config/env .getConfig(env) supports Bitbucket username/password 1`] = `
Object {
  "hostRules": Array [
    Object {
      "endpoint": "a bitbucket endpoint",
      "platform": "bitbucket",
      "token": "c29tZS11c2VybmFtZTphcHAtcGFzc3dvcmQ=",
    },
  ],
  "platform": "bitbucket",
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [
    Object {
      "default": true,
      "endpoint": "a ghe endpoint",
      "platform": "github",
      "token": "a ghe token",
    },
    Object {
      "endpoint": "https://api.github.com/",
      "platform": "github",
      "token": "a github.com token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com and gitlab.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [
    Object {
      "default": true,
      "endpoint": "a ghe endpoint",
      "platform": "github",
      "token": "a ghe token",
    },
    Object {
      "endpoint": "https://api.github.com/",
      "platform": "github",
      "token": "a github.com token",
    },
    Object {
      "endpoint": undefined,
      "platform": "gitlab",
      "token": "a gitlab token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitHub token 1`] = `
Object {
  "hostRules": Array [
    Object {
      "default": true,
      "endpoint": undefined,
      "platform": "github",
      "token": "github.com token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports GitLab custom endpoint 1`] = `
Object {
  "endpoint": "a gitlab endpoint",
  "hostRules": Array [
    Object {
      "endpoint": "a gitlab endpoint",
      "platform": "gitlab",
      "token": "a gitlab token",
    },
  ],
  "platform": "gitlab",
}
`;

exports[`config/env .getConfig(env) supports GitLab token 1`] = `
Object {
  "endpoint": undefined,
  "hostRules": Array [
    Object {
      "endpoint": undefined,
      "platform": "gitlab",
      "token": "a gitlab.com token",
    },
  ],
  "platform": "gitlab",
}
`;

exports[`config/env .getConfig(env) supports VSTS 1`] = `
Object {
  "endpoint": "a vsts endpoint",
  "hostRules": Array [
    Object {
      "endpoint": "a vsts endpoint",
      "platform": "vsts",
      "token": "a vsts token",
    },
  ],
  "platform": "vsts",
}
`;

exports[`config/env .getConfig(env) supports docker username/password 1`] = `
Object {
  "hostRules": Array [
    Object {
      "password": "some-password",
      "platform": "docker",
      "username": "some-username",
    },
  ],
}
`;
